@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.15 ===
+* Got rid of the plauge <windows.h> header in the header files.
 
 === 1.0.14 ===
 * Updated build scripts.
